ckanext/who_afro/assets/css/who-afro.css
/* ... */
.search-section div.search-options {
}

.search-options ul {
    list-style-type: none;
    padding: 0;
    margin: 0;
}

.search-options ul li.criterion {
    display: inline-flex;
    align-items: center;
    margin-right: 12px;
    background-color: #FFFFFF;
    padding: 6px;
    height: 20px;
    border-radius: 4px;
    box-shadow: 0px 8px 24px 0px #0000000A;
}

.search-options ul li {
    display: inline-flex;
    align-items: center;
}

.search-options ul li.criterion a {
    text-decoration: none;
    font-weight: 400;
    font-size: 12px;
    line-height: 16px;
    color: var(--secondary-who-blue);
    text-transform: uppercase;
    text-align: center;
    letter-spacing: 1px;
}

.search-options ul li a {
    text-decoration: underline;
    font-weight: 700;
    font-size: 14px;
    line-height: 20px;
    color: var(--primary-navy);
    text-align: center;
}

.all-criteria {
    font-weight: 700;
    font-size: 14px;
    line-height: 20px;
    color: var(--primary-navy);
}

.search-form {
  padding-bottom: 0; /* to remove search form default padding */
  border-bottom: 0;
}


.promoted a.small,
.promoted a.small:active,
.promoted a.small:hover ,
.promoted a.small:visited {
    color:#FFFFFF;
    padding-top: 0;
    text-decoration: underline;
    font-weight: 400;
    font-size: 15.64px;
    line-height: 19px;
}

.insights {
    min-height: 484px;
    background: var(--who-blue-ten-percent);
    padding: 48px 0;
}

.insight-row, .data-hub-stats .row {
    --bs-gutter-x: 0;
}

.insights H2 {
    margin-bottom: 32px;
    margin-top: 0px;
    font-size: 36px;
    font-weight: 400;
    line-height: 48px;
    color: var(--primary-navy);

}

.insights H3 {
    margin-bottom: 12px;
    font-weight: 400;
    font-size: 28px;
    line-height: 36px;
    color: var(--primary-navy);

}

.insight-square {
    background-color: white;
    padding: 16px;
    border-radius: 8px;
    min-height: 297px;
    margin-bottom: 48px;
    margin-right: 24px;
    width: calc(33.3% - 24px) ;
}


.insight-square p, .insight-rect p span:first-child {
    color: var(--primary-navy);
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
}

.insight-rect p span:nth-child(2) {
    color: var(--primary-navy);
    font-weight: 700;
    font-size: 14px;
}

.insight-square p a span, .insight-rect p a span:last-child {
    float: right;
    color: var(--secondary-who-blue);
}

.insight-img-container {
    padding: 18px;
}

.insight-img-container img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.insight-rect img {
    object-fit: cover;
}

.insight-rect {
    background-color: white;
    padding: 16px;
    border-radius: 8px;
    height: 354px;
}

.insight-small-rect {
    background-color: white;
    padding: 19px;
    border-radius: 8px;
    min-height: 101px;
}

.data-hub-stats {
    margin-top: 48px;
    height: 374px;
}

.insight-small-rect p:first-child {
    color: var(--primary-navy);
    font-weight: 700;
    font-size: 18px;
    line-height: 24px;
}

@media only screen and (min-width: 991px) {
    .data-hub-stats {
        margin-top: 0;
        margin-left: 24px;
        width: calc(50% - 24px);
        height: 374px;
    }
}

@media only screen and (min-width: 560px) {
    .insight-small-rect:last-child {
        margin-left: 24px;
        width: calc(50% - 24px);
    }
}

.recently-updated .container {
    margin-top: 64px;
}

@media only screen and (max-width: 559px) {
    .data-hub-stats H3 {
        margin-top: 0;
    }
    .data-hub-stats {
        margin-top: 32px;
    }
    .recently-updated .container {
        margin-top: 32px;
    }

    .insights {
        padding-bottom: 0;
        padding-top: 32px;
    }
    .insight-small-rect:last-child {
        margin-top: 24px;
    }
    .insights .container {
        min-height: 1750px;
    }

}

.number-with-arrows span {
    color: var(--primary-navy);
    font-weight: 400;
    font-size: 36px;
}

.data-hub-stats .row {
    margin-bottom:  24px;
}

.insight-square:last-child {
    margin-right: 0;
    width: calc(33.3%);
}

@media only screen and (max-width: 559px) {
    .row.insight-row {
        display: block;
    }
    .insight-square, .insight-square:last-child {
        margin-right: 0;
        margin-bottom: 32px;
        width: 100%;
    }
}

.category-box {
    background: #FFFFFF;
    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.04);
    border-radius: 4px;
    margin-bottom: 24px;
    padding:  20px;
    height:  110px;
}

.category-box .group-thumbnail {
    float:  left;
    display: inline-block;
    vertical-align: middle;
    max-height: 70px;
    margin-right: 20px;
}

.category-box .group-text {
    vertical-align: middle;
    width:  100%;
}
.category-box .group-text .title{
    font-weight: 700;
    font-size: 16px;
    line-height: 24px;
    color: #008dc9;
}

.category-box .group-text .desc{
    font-weight: 400;
    font-size: 14px;
    line-height: 20px;
    color: #212121;
    overflow:  hidden;
    height:  50px;
}

.category-box .btn-delete {
    background: transparent;
    color: #008dc9;
    font-size: 20px;
    padding: 20px;
    position: absolute;
    bottom: 10px;
    right: 10px;
}

/* tags margin */
.dataset-resources {
    list-style-type: none;
    padding-left: 0;
    flex-direction: column;
    align-items: center;

}

.dataset-resources li {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    padding: 2px 6px;
    background: var(--who-blue-ten-percent);
    border-radius: 4px;
    margin-left: 0;
    margin-right: 8px;
    margin-bottom: 24px;
    letter-spacing: 0.1em;
    text-transform: uppercase;
    border: none;
}

.dataset-resources li a.badge,
.dataset-resources li a.badge:hover {
    display: inline-block;
    background-color: transparent;
    color: var(--secondary-who-blue);
    text-decoration: none;
    border-radius: 4px;
}
/* ... */

